...
            </View>
        );
    }
    
    return (
        <>
            <AppText style={styles.sectionTitle}>Mais recentes:</AppText>
            {researches.map(research => (
                <ResearchCard 
                    key={research.id} 
                    research={research} 
                    onPress={handleCardPress} 
                />
...
            </View>
            
            <View style={styles.searchContainer}>
                <SearchBar
                    value={searchText}
                    onChangeText={setSearchText}
                    placeholder="Explore projetos existentes..."
                />
            </View>

            <View style={styles.listArea}>
                 {renderContent()}
            </View>
...
